@@ -13,6 +13,7 @@ import org.elasticsearch.core.IOUtils;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.env.Environment;
+import org.elasticsearch.telemetry.metric.MeterRegistry;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.watcher.ResourceWatcherService;
 import org.elasticsearch.xpack.esql.datasources.spi.Configured;
@@ -21,6 +22,7 @@ import org.elasticsearch.xpack.esql.datasources.spi.ConnectorFactory;
 import org.elasticsearch.xpack.esql.datasources.spi.DataSourcePlugin;
 import org.elasticsearch.xpack.esql.datasources.spi.DecompressionCodec;
 import org.elasticsearch.xpack.esql.datasources.spi.ExternalSourceFactory;
+import org.elasticsearch.xpack.esql.datasources.spi.ExternalSourceMetrics;
 import org.elasticsearch.xpack.esql.datasources.spi.FormatReaderFactory;
 import org.elasticsearch.xpack.esql.datasources.spi.FormatSpec;
 import org.elasticsearch.xpack.esql.datasources.spi.SourceMetadata;
@@ -35,6 +37,7 @@ import org.elasticsearch.xpack.esql.datasources.spi.TableCatalogFactory;
 import java.io.Closeable;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -62,6 +65,7 @@ public final class DataSourceModule implements Closeable {
     private final Map<String, SourceOperatorFactoryProvider> pluginFactories;
     private final List<Closeable> managedCloseables;
     private final DataSourceCapabilities capabilities;
+    private final ExternalSourceMetrics externalSourceMetrics;
 
     public DataSourceModule(
         List<DataSourcePlugin> dataSourcePlugins,
@@ -70,9 +74,22 @@ public final class DataSourceModule implements Closeable {
         BlockFactory blockFactory,
         ExecutorService executor,
         DataSourceCredentials credentials,
-        BooleanSupplier workloadIdentityEnabled
+        BooleanSupplier managedIdentityEnabled
     ) {
-        this(dataSourcePlugins, capabilities, settings, blockFactory, executor, credentials, workloadIdentityEnabled, null, null, null);
+        this(
+            dataSourcePlugins,
+            capabilities,
+            settings,
+            blockFactory,
+            executor,
+            credentials,
+            managedIdentityEnabled,
+            null,
+            null,
+            null,
+            null,
+            LocalFileAccess.UNRESTRICTED
+        );
     }
 
     public DataSourceModule(
@@ -82,18 +99,58 @@ public final class DataSourceModule implements Closeable {
         BlockFactory blockFactory,
         ExecutorService executor,
         DataSourceCredentials credentials,
-        BooleanSupplier workloadIdentityEnabled,
+        BooleanSupplier managedIdentityEnabled,
         @Nullable ThreadPool threadPool,
         @Nullable Environment environment,
-        @Nullable ResourceWatcherService resourceWatcherService
+        @Nullable ResourceWatcherService resourceWatcherService,
+        @Nullable MeterRegistry meterRegistry
+    ) {
+        this(
+            dataSourcePlugins,
+            capabilities,
+            settings,
+            blockFactory,
+            executor,
+            credentials,
+            managedIdentityEnabled,
+            threadPool,
+            environment,
+            resourceWatcherService,
+            meterRegistry,
+            LocalFileAccess.UNRESTRICTED
+        );
+    }
+
+    public DataSourceModule(
+        List<DataSourcePlugin> dataSourcePlugins,
+        DataSourceCapabilities capabilities,
+        Settings settings,
+        BlockFactory blockFactory,
+        ExecutorService executor,
+        DataSourceCredentials credentials,
+        BooleanSupplier managedIdentityEnabled,
+        @Nullable ThreadPool threadPool,
+        @Nullable Environment environment,
+        @Nullable ResourceWatcherService resourceWatcherService,
+        @Nullable MeterRegistry meterRegistry,
+        LocalFileAccess localFileAccess
     ) {
         this.capabilities = capabilities;
+        // Node telemetry sink for external-source read metrics; NOOP when no registry is supplied (tests).
+        this.externalSourceMetrics = meterRegistry == null ? ExternalSourceMetrics.NOOP : new ExternalSourceMetrics(meterRegistry);
+        LocalFileAccess effectiveLocalFileAccess = localFileAccess != null ? localFileAccess : LocalFileAccess.UNRESTRICTED;
         // Off-timer scheduler for the async read-retry backoff, so a retry does not park a GENERIC-pool thread on
         // Thread.sleep while it waits; DIRECT (run promptly on the executor) when no ThreadPool is supplied (tests).
         RetryScheduler retryScheduler = threadPool == null
             ? RetryScheduler.DIRECT
             : (command, delayMillis, exec) -> threadPool.schedule(command, TimeValue.timeValueMillis(Math.max(0L, delayMillis)), exec);
-        this.storageProviderRegistry = new StorageProviderRegistry(settings, credentials, workloadIdentityEnabled, retryScheduler);
+        this.storageProviderRegistry = new StorageProviderRegistry(
+            settings,
+            credentials,
+            managedIdentityEnabled,
+            retryScheduler,
+            effectiveLocalFileAccess
+        );
 
         DecompressionCodecRegistry codecRegistry = new DecompressionCodecRegistry();
         for (DataSourcePlugin plugin : dataSourcePlugins) {
@@ -231,7 +288,9 @@ public final class DataSourceModule implements Closeable {
             codecRegistry,
             settings,
             executor,
-            blockFactory
+            blockFactory,
+            effectiveLocalFileAccess,
+            externalSourceMetrics
         );
         sourceFactoryMap.put("file", fileFallback);
         // Also register under each format name so OperatorFactoryRegistry can look up
@@ -240,7 +299,13 @@ public final class DataSourceModule implements Closeable {
             sourceFactoryMap.putIfAbsent(formatName, fileFallback);
         }
 
-        this.sourceFactories = Map.copyOf(sourceFactoryMap);
+        // Insertion order is load-bearing, so this cannot be Map.copyOf: that returns a map whose iteration order the
+        // JDK documents as unspecified, silently discarding the "file factory last" ordering established above.
+        // ExternalSourceResolver picks the FIRST factory whose canHandle claims a path, and the claims genuinely
+        // overlap: the Iceberg catalog wrapper claims an extensionless s3 object (a table directory), and the file
+        // factory's config-aware canHandle claims that same object whenever an explicit `format` is configured. With
+        // an undefined order, which one resolves such a path would vary between nodes and restarts.
+        this.sourceFactories = Collections.unmodifiableMap(new LinkedHashMap<>(sourceFactoryMap));
         this.pluginFactories = Map.copyOf(operatorFactoryProviders);
         this.managedCloseables = closeables;
     }
@@ -269,6 +334,20 @@ public final class DataSourceModule implements Closeable {
         return sourceFactories;
     }
 
+    /** The node-level external-source telemetry holder, or {@link ExternalSourceMetrics#NOOP} when no registry was supplied. */
+    public ExternalSourceMetrics externalSourceMetrics() {
+        return externalSourceMetrics;
+    }
+
+    /**
+     * Convenience overload that backs BOTH registry roles with a single executor. This collapses the
+     * page-consumer/coordination role and the read/parse role onto one pool, which is the exact wiring that
+     * deadlocks multi-file text reads in production (a full pool of blocked parser workers with no free thread
+     * left to run the drain that consumes them). It is safe only for synchronous / single-threaded callers
+     * (e.g. {@code Runnable::run} in tests). Production wiring must use
+     * {@link #createOperatorFactoryRegistry(Executor, Executor)} with two distinct pools —
+     * see {@code TransportEsqlQueryAction}.
+     */
     public OperatorFactoryRegistry createOperatorFactoryRegistry(Executor executor) {
         return createOperatorFactoryRegistry(executor, executor);
     }
